kubernetes-manifests/authservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice
  labels:
    app: authservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: cazzzzz/tr-authservice-hipster:latest
        ports:
        - containerPort: 8081
        readinessProbe:
          initialDelaySeconds: 10
          httpGet:
            path: "/_healthz"
            port: 8081
        livenessProbe:
          initialDelaySeconds: 15
          periodSeconds: 10
          httpGet:
            path: "/_healthz"
            port: 8081
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: authservice
  labels:
    app: authservice
spec:
  type: ClusterIP
  selector:
    app: authservice
  ports:
  - name: http
    port: 8081
    targetPort: 8081
