kubernetes-manifests/cartservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartservice
  labels:
    app: cartservice
spec:
  selector:
    matchLabels:
      app: cartservice
  template:
    metadata:
      labels:
        app: cartservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: cazzzzz/trf-cartservice-hipster:v1
        ports:
        - containerPort: 7070
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 300m
            memory: 512Mi
        readinessProbe:
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 6
          tcpSocket:
            port: 7070
        livenessProbe:
          initialDelaySeconds: 60
          periodSeconds: 10
          failureThreshold: 6
          tcpSocket:
            port: 7070
---
apiVersion: v1
kind: Service
metadata:
  name: cartservice
  labels:
    app: cartservice
spec:
  type: ClusterIP
  selector:
    app: cartservice
  ports:
  - name: http
    port: 7070
    targetPort: 7070
