kubernetes-manifests/checkoutservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkoutservice
  labels:
    app: checkoutservice
spec:
  selector:
    matchLabels:
      app: checkoutservice
  template:
    metadata:
      labels:
        app: checkoutservice
    spec:
      containers:
        - name: server
          image: cazzzzz/trf-checkoutservice-hipster:latest
          ports:
          - containerPort: 5050
          readinessProbe:
            httpGet:
              path: "/_healthz"
              port: 5050
          livenessProbe:
            httpGet:
              path: "/_healthz"
              port: 5050
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice
  labels:
    app: checkoutservice
spec:
  type: ClusterIP
  selector:
    app: checkoutservice
  ports:
  - name: http
    port: 5050
    targetPort: 5050
