kubernetes-manifests/paymentservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentservice
  labels:
    app: paymentservice
spec:
  selector:
    matchLabels:
      app: paymentservice
  template:
    metadata:
      labels:
        app: paymentservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: cazzzzz/trf-paymentservice-hipster:latest
        ports:
        - containerPort: 50051
        readinessProbe:
          httpGet:
            path: "/_healthz"
            port: 50051
        livenessProbe:
          httpGet:
            path: "/_healthz"
            port: 50051
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: paymentservice
  labels:
    app: paymentservice
spec:
  type: ClusterIP
  selector:
    app: paymentservice
  ports:
  - name: http
    port: 50051
    targetPort: 50051
