kubernetes-manifests/productcatalogservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productcatalogservice
  labels:
    app: productcatalogservice
spec:
  selector:
    matchLabels:
      app: productcatalogservice
  template:
    metadata:
      labels:
        app: productcatalogservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: cazzzzz/trf-productcatalogservice-hipster:v1
        ports:
        - containerPort: 3550
        readinessProbe:
          initialDelaySeconds: 20
          periodSeconds: 5
          httpGet:
            path: "/_healthz"
            port: 3550
        livenessProbe:
          initialDelaySeconds: 40
          failureThreshold: 6
          periodSeconds: 5
          httpGet:
            path: "/_healthz"
            port: 3550
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: productcatalogservice
  labels:
    app: productcatalogservice
spec:
  type: ClusterIP
  selector:
    app: productcatalogservice
  ports:
  - name: http
    port: 3550
    targetPort: 3550
