kubernetes-manifests/kgateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kgateway
spec:
  controllerName: kgateway.dev/kgateway

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hipstershop-gateway
  labels:
    app: hipstershop
spec:
  gatewayClassName: kgateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  
  labels:
    app: frontend
spec:
  parentRefs:
    - name: hipstershop-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /static/
      backendRefs:
        - name: frontend
          port: 80
    - matches:
        - path:
            type: Exact
            value: /_healthz
      backendRefs:
        - name: frontend
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /product
      backendRefs:
        - name: frontend
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /cart
      backendRefs:
        - name: frontend
          port: 80
    - matches:
        - path:
            type: Exact
            value: /setCurrency
      backendRefs:
        - name: frontend
          port: 80
    - matches:
        - path:
            type: Exact
            value: /login
      backendRefs:
        - name: frontend
          port: 80
    - matches:
        - path:
            type: Exact
            value: /signup
      backendRefs:
        - name: frontend
          port: 80
    - matches:
        - path:
            type: Exact
            value: /logout
      backendRefs:
        - name: frontend
          port: 80
    - matches:
        - path:
            type: Exact
            value: /api/assistant/chat
      backendRefs:
        - name: frontend
          port: 80
    - matches:
        - path:
            type: Exact
            value: /
      backendRefs:
        - name: frontend
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: productcatalog-route
  
  labels:
    app: productcatalogservice
spec:
  parentRefs:
    - name: hipstershop-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/products/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /products/
      backendRefs:
        - name: productcatalogservice
          port: 3550
    - matches:
        - path:
            type: Exact
            value: /api/products
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /products
      backendRefs:
        - name: productcatalogservice
          port: 3550

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cart-route
  
  labels:
    app: cartservice
spec:
  parentRefs:
    - name: hipstershop-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/cart
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /cart
      backendRefs:
        - name: cartservice
          port: 7070

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: currency-route
  
  labels:
    app: currencyservice
spec:
  parentRefs:
    - name: hipstershop-gateway
  rules:
    - matches:
        - path:
            type: Exact
            value: /api/currency/currencies
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /currencies
      backendRefs:
        - name: currencyservice
          port: 7000
    - matches:
        - path:
            type: Exact
            value: /api/currency/convert
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /convert
      backendRefs:
        - name: currencyservice
          port: 7000

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shipping-route
  
  labels:
    app: shippingservice
spec:
  parentRefs:
    - name: hipstershop-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/shipping
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: shippingservice
          port: 50051

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: checkout-route
  
  labels:
    app: checkoutservice
spec:
  parentRefs:
    - name: hipstershop-gateway
  rules:
    - matches:
        - path:
            type: Exact
            value: /api/checkout
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /checkout
      backendRefs:
        - name: checkoutservice
          port: 5050

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: recommendation-route
  
  labels:
    app: recommendationservice
spec:
  parentRefs:
    - name: hipstershop-gateway
  rules:
    - matches:
        - path:
            type: Exact
            value: /api/recommendations
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /recommendations
      backendRefs:
        - name: recommendationservice
          port: 8080

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ad-route
  
  labels:
    app: adservice
spec:
  parentRefs:
    - name: hipstershop-gateway
  rules:
    - matches:
        - path:
            type: Exact
            value: /api/ads
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /ads
      backendRefs:
        - name: adservice
          port: 9555

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: payment-route
  
  labels:
    app: paymentservice
spec:
  parentRefs:
    - name: hipstershop-gateway
  rules:
    - matches:
        - path:
            type: Exact
            value: /api/payment/charge
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /charge
      backendRefs:
        - name: paymentservice
          port: 50051

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auth-route

  labels:
    app: authservice
spec:
  parentRefs:
    - name: hipstershop-gateway
  rules:
    - matches:
        - path:
            type: Exact
            value: /api/auth/login
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /login
      backendRefs:
        - name: authservice
          port: 8081
    - matches:
        - path:
            type: Exact
            value: /api/auth/signup
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /signup
      backendRefs:
        - name: authservice
          port: 8081
    - matches:
        - path:
            type: Exact
            value: /api/auth/logout
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /logout
      backendRefs:
        - name: authservice
          port: 8081
    - matches:
        - path:
            type: Exact
            value: /api/auth/me
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /me
      backendRefs:
        - name: authservice
          port: 8081

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: email-route
  
  labels:
    app: emailservice
spec:
  parentRefs:
    - name: hipstershop-gateway
  rules:
    - matches:
        - path:
            type: Exact
            value: /api/email/send-confirmation
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /send-confirmation
      backendRefs:
        - name: emailservice
          port: 8080
